--- a/x10.lib/test/pass/Makefile
+++ b/x10.lib/test/pass/Makefile
@@ -1,13 +1,13 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.1 2007-04-28 09:28:45 ganeshvb Exp $
+# $Id: Makefile,v 1.2 2007-05-09 06:36:32 ganeshvb Exp $
 # This file is part of X10 Runtime System.
 #
 
 ## Makefile for X10Lib src subdir.
 
-.SUFFIXES: .cc .cpp .cxx .C .o .h .exe
+.SUFFIXES: .cc .cc .cxx .C .o .h .exe
 
 MAKE = make
 CXX = mpCC_r -q64 -qarch=pwr5
@@ -15,7 +15,8 @@ DEFS = -DDEBUG
 CXXFLAGS = -qtune=pwr5 -O3 -qhot -w 
 INCLUDES = -I. -I../../include
 LINKFLAGS = -L../../src -lx10
-RM = rm -f
+RM = rm  -f
+RMDIR = rm -r -f
 AR = ar
 ARFLAGS = -v -r -X64
 RANLIB = ranlib -X64
@@ -26,14 +27,18 @@ LIBNAME = x10
 MAJOR_VERSION = 0
 MINOR_VERSION = 1
 
-SRCS = Test_array.cpp \
-       Test_dist.cpp  \
-       Test_point.cpp \
-       Test_region.cpp \
-       Test_tiled_region.cpp
+SRCS = Test_array.cc \
+       Test_array_async.cc\
+       Test_dist.cc  \
+       Test_async.cc \
+       Test_point.cc \
+       Test_region.cc \
+       Test_tiled_region.cc
 
 EXE = Test_array.exe\
+      Test_array_async.exe\
       Test_dist.exe\
+      Test_async.exe\
       Test_point.exe\
       Test_region.exe\
       Test_tiled_region.exe
@@ -43,9 +48,10 @@ HEADERS =
 all: $(EXE)
 
 clean:
-	$(RM) $(EXE) *.log
+	$(RM) $(EXE) *.log core*
+	$(RMDIR) core*
 	
-.cpp.exe: $(SRCS)
+.cc.exe: $(SRCS)
 	$(RM) $@
 	$(CXX) $(CXXFLAGS) $(DEFS) $(INCLUDES) $< -o $@ $(LINKFLAGS)
 
