--- a/x10.lib/test/fail/Makefile
+++ b/x10.lib/test/fail/Makefile
@@ -1,13 +1,13 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.1 2007-04-28 09:28:45 ganeshvb Exp $
+# $Id: Makefile,v 1.2 2007-05-09 06:39:27 ganeshvb Exp $
 # This file is part of X10 Runtime System.
 #
 
 ## Makefile for X10Lib src subdir.
 
-.SUFFIXES: .cc .cpp .cxx .C .o .h .exe
+.SUFFIXES: .cc cc .cxx .C .o .h .exe
 
 MAKE = make
 CXX = mpCC_r -q64 -qarch=pwr5
@@ -16,6 +16,7 @@ CXXFLAGS = -qtune=pwr5 -O3 -qhot -w
 INCLUDES = -I. -I../../include
 LINKFLAGS = -L../../src -lx10
 RM = rm -f
+RMDIR = rm -r -f
 AR = ar
 ARFLAGS = -v -r -X64
 RANLIB = ranlib -X64
@@ -26,8 +27,8 @@ LIBNAME = x10
 MAJOR_VERSION = 0
 MINOR_VERSION = 1
 
-SRCS = Test_point.cpp  \
-       Test_region.cpp 
+SRCS = Test_point.cc  \
+       Test_region.cc 
 
 EXE = Test_point.exe\
       Test_region.exe
@@ -38,9 +39,10 @@ HEADERS =
 all: $(EXE)
 
 clean:
-	$(RM) $(EXE) *.log
+	$(RM) $(EXE) *.log core*
+	$(RMDIR) core*
 	
-.cpp.exe: $(SRCS)
+.cc.exe: $(SRCS)
 	$(RM) $@
 	$(CXX) $(CXXFLAGS) $(DEFS) $(INCLUDES) $< -o $@ $(LINKFLAGS)
 
