--- a/x10.lib/src/Makefile
+++ b/x10.lib/src/Makefile
@@ -1,7 +1,7 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.4 2007-04-28 09:28:44 ganeshvb Exp $
+# $Id: Makefile,v 1.5 2007-05-09 07:04:29 ganeshvb Exp $
 # This file is part of X10 Runtime System.
 #
 
@@ -34,9 +34,9 @@ LIBTARGET = lib$(LIBNAME).a
 SCHED_A = $(SUBDIR2)/sched.a
 ARRAY_A = $(SUBDIR1)/array.a
 
-SRCS = x10lib.cc gas.cpp
-OBJS = x10lib.o  gas.o
-HEADERS = types.h x10lib.h gas.h
+SRCS = x10lib.cc gas.cpp 
+OBJS = x10lib.o  gas.o 
+HEADERS = types.h x10lib.h gas.h alloc.h 
 
 all: $(LIBTARGET)
 
@@ -60,7 +60,7 @@ install: $(LIBTARGET)
 clean:
 	(cd $(SUBDIR1); $(MAKE) $@)
 	(cd $(SUBDIR2); $(MAKE) $@)
-	$(RM) $(LIBTARGET) $(OBJS) *.log
+	$(RM) $(LIBTARGET) $(OBJS) *.log core*
 	
 .cc.o:
 	$(RM) $@
