--- a/x10.lib/benchmarks/rand/cpp/Makefile
+++ b/x10.lib/benchmarks/rand/cpp/Makefile
@@ -1,13 +1,13 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.2 2007-05-09 12:40:29 ganeshvb Exp $
+# $Id: Makefile,v 1.3 2007-05-10 05:42:38 srkodali Exp $
 # This file is part of X10 Runtime System.
 #
 # Makefile for RandomAccess Benchmarks (C++ Version).
 #
 
-.SUFFIXES: .cc .cpp .cxx .C .c .h .o .exe
+.SUFFIXES: .cc .cpp .cxx .C .c .h .o
 
 LIBNAME = x10
 LIBTARGET = lib$(LIBNAME).a
@@ -22,15 +22,15 @@ LIBS = -l$(LIBNAME)
 LINKFLAGS =
 RM = rm -f
 
-TARGET = RandomAccess_spmd.exe \
-         RandomAccess.exe \
-         gups.exe
-
-SRCS = RandomAccess_spmd.cc \
-       RandomAccess.cc\
-       gups.cc
+TARGET = gups
+SRCS = gups.cc
+OBJS = gups.o
 
 all: $(TARGET)
+
+$(TARGET): $(OBJS)
+	$(RM) $@
+	$(CXX) $(LINKFLAGS) $(OBJS) -o $@ $(LIBDIRS) $(LIBS)
 
 install:
 	@echo "Nothing to \"install\" in this subdir."
@@ -38,7 +38,22 @@ install:
 clean:
 	$(RM) $(TARGET) $(OBJS) *.log *.out
 
-.cc.exe: $(SRCS) 
+.cc.o:
 	$(RM) $@
-	$(CXX) $(CXXFLAGS) $(DEFS) $(INCLUDES)  $< -o $@ $(LIBDIRS) $(LIBS)
+	$(CXX) $(CXXFLAGS) $(DEFS) $(INCLUDES)  -c $< -o $@
 
+.cxx.o:
+	$(RM) $@
+	$(CXX) $(CXXFLAGS) $(DEFS) $(INCLUDES)  -c $< -o $@
+
+.cpp.o:
+	$(RM) $@
+	$(CXX) $(CXXFLAGS) $(DEFS) $(INCLUDES)  -c $< -o $@
+
+.C.o:
+	$(RM) $@
+	$(CXX) $(CXXFLAGS) $(DEFS) $(INCLUDES)  -c $< -o $@
+
+.c.o:
+	$(RM) $@
+	$(CXX) $(CXXFLAGS) -qsourcetype=c++ $(DEFS) $(INCLUDES) -c $< -o $@
